# ableton-mcp

./: .gitignore  CLAUDE.md  README.md  TODO.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
control_surface/AbletonMCP/: __init__.py
src/ableton_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: conftest.py  test_arrangement_tools.py  test_browser_tools.py  test_client.py  test_clip_readback_tools.py  test_clip_tools.py  test_placeholder.py  test_qol_tools.py  test_scene_tools.py  test_session_tools.py  test_track_tools.py  test_transport_tools.py
